# xemmai

./: .travis.yml  CMakeLists.txt  Config.cmake.in  Makefile.am  README.md  TODO  configure.ac  test.bat  xemmai.sln  xemmai.vcproj  xemmai.vcxproj
.github/workflows/: cmake.yml
doc/: Expressions.md  ExpressionsAndStatements.md  GarbageCollection.md  Literals.md  Makefile.am  ObjectTraits.md  OtherInternals.md  PrimaryExpressions.md  StackUsage.md  TermExpressions.md  WalkThrough.md  context.txt  xemmai.bnf  xemmai.txt
include/: Makefile.am
include/xemmai/: array.h  ast.h  atomic.h  boolean.h  bytes.h  class.h  code.h  convert.h  convert_call.h  convert_override.h  derived.h  dictionary.h  engine.h  fiber.h  file.h  float.h  global.h  hash.h  heap.h  integer.h  io.h  lambda.h  lexer.h  list.h  macro.h  map.h  math.h  method.h  module.h  native.h  null.h  object.h  object_call.h  os.h  parser.h  pointer.h  pool.h  scope.h  sharable.h  string.h  (+9 more)
include/xemmai/io/: file.h  path.h  reader.h  writer.h
include/xemmai/portable/: atomic.h  configure.h.in  convert.h  define.h  fiber.h  library.h  path.h  thread.h
modules/: CMakeLists.txt  Makefile.am  math.cc  math.vcxproj  os.cc  os.vcxproj  threading.cc  threading.vcxproj  time.cc  time.vcxproj
pkgconfig/: Makefile.am  xemmai-uninstalled.pc.in  xemmai.pc.in
src/: CMakeLists.txt  Makefile.am  array.cc  ast.cc  boolean.cc  bytes.cc  class.cc  code.cc  code_call.h  code_operator.h  dictionary.cc  engine.cc  fiber.cc  file.cc  float.cc  global.cc  hash.cc  integer.cc  io.cc  io__file.cc  io__path.cc  io__reader.cc  io__writer.cc  jit.cc  lambda.cc  lexer.cc  list.cc  main.cc  map.cc  math.cc  method.cc  module.cc  native.cc  null.cc  object.cc  os.cc  parser.cc  pointer.cc  portable.cc  scope.cc  (+10 more)
test/: CMakeLists.txt  Makefile.am  array.xm  backtrace.xm  backtrace.xmde  backtrace.xmdi  backtrace.xme  backtrace.xmi  bind.xm  block.xm  bytes.xm  call-errors.xm  child.xm  dictionary.xm  dictionary2.xm  directory.xm  dump.xme  dump.xmoe  dump2.xme  dump2.xmo  dump2.xmoe  dump3.xme  dump3.xmo  dump3.xmoe  errors.xm  expand.xm  fd.xm  fd.xmo  fiber.xm  fiber2.xm  fiber3.xm  field.xm  file.xm  file2.xm  fix.xm  flow.xm  flow2.xm  flow3.xm  flow4.xm  flow5.xm  (+56 more)
test/callback/: CMakeLists.txt  Makefile.am  callback.cc  callback.h  callback.vcproj  callback.vcxproj  extension.cc  fiber.xm  fiber.xm.in  fiber2.xm  fiber2.xm.in  library.cc  test.xm  test.xm.in
test/container/: CMakeLists.txt  Makefile.am  container.cc  container.h  container.vcproj  container.vcxproj  queue.cc  queue.h  test.xm.in
test/enum/: CMakeLists.txt  Makefile.am  enum.cc  test.xm  test.xm.in
