cmake_minimum_required(VERSION 3.10)
project(xemmai VERSION 202102)
add_subdirectory(src)
add_subdirectory(modules)
enable_testing()
add_subdirectory(test)
install(TARGETS xemmai DESTINATION bin)
install(TARGETS math os threading time DESTINATION lib/xemmai-${xemmai_VERSION})
install(DIRECTORY include/xemmai DESTINATION include/xemmai-${xemmai_VERSION})
