nobase_include_HEADERS = \
	xemmai/portable/atomic.h \
	xemmai/portable/convert.h \
	xemmai/portable/define.h \
	xemmai/portable/library.h \
	xemmai/portable/path.h \
	xemmai/portable/thread.h \
	xemmai/array.h \
	xemmai/boolean.h \
	xemmai/bytes.h \
	xemmai/class.h \
	xemmai/code.h \
	xemmai/convert.h \
	xemmai/convert_call.h \
	xemmai/convert_override.h \
	xemmai/derived.h \
	xemmai/dictionary.h \
	xemmai/engine.h \
	xemmai/fiber.h \
	xemmai/file.h \
	xemmai/float.h \
	xemmai/global.h \
	xemmai/hash.h \
	xemmai/integer.h \
	xemmai/lambda.h \
	xemmai/lexer.h \
	xemmai/macro.h \
	xemmai/method.h \
	xemmai/module.h \
	xemmai/native.h \
	xemmai/null.h \
	xemmai/object.h \
	xemmai/object_call.h \
	xemmai/parser.h \
	xemmai/pointer.h \
	xemmai/pool.h \
	xemmai/scope.h \
	xemmai/string.h \
	xemmai/symbol.h \
	xemmai/thread.h \
	xemmai/throwable.h \
	xemmai/tuple.h \
	xemmai/type.h
